# flara-research

./: .gitignore  AGENTS.md  Cargo.toml  Delta_Angle_Security_Paper.md  Flara_Constitution.md  PSNAT-AMDON_draft_v0.1.md  PSNAT_draft_v0.19.1.md  PseudoClaude_Paper.md  README.md  RESEARCH_LOG.md  STASH.md  cherdius_spec.md  flara_identity.md  niceturing_spec.md
AmDon/: GuardPipeline.cs  (+9 more)
research/jumping-seedling/: .gitignore  Cargo.toml  HANDOFF.md  OPTIMIZATION_NOTES.md  README.md  RESEARCH_LOG.md
research/jumping-seedling/.cargo/: config.toml
research/jumping-seedling/monarch-attn-causal/: JOURNAL.md  ROOFLINE_5500U.md  causal_probe.py  eval_ball_prune_check.py  eval_bucket_exposure_large.py  eval_bucket_floor_rescue.py  eval_bucket_margin_diagnosis.py  eval_bucket_margin_diagnosis_large.py  eval_bucket_multineedle.py  eval_bucket_occupancy_exposure_sweep.py  eval_bucket_robust_adversarial.py  eval_bucket_robust_diagnosis.py  eval_bucket_route.py  eval_bucket_route_manyseeds.py  eval_bucket_stability_large.py  eval_causal.py  eval_causal_monarch_samenorm.py  eval_dense_attention_control.py  eval_dense_vs_topk_decoy.py  eval_dual.py  eval_fast_residual_check.py  eval_flash_hypothesis.py  eval_flash_isolation.py  eval_flash_isolation2.py  eval_flop_accounting.py  eval_flop_accounting_fast_residual.py  eval_flop_accounting_with_residual.py  eval_gated_stress.py  eval_gated_stress_v2.py  eval_landmark_samenorm.py  eval_landmark_sanity.py  eval_linear_hybrid.py  eval_lsh_prefilter_adversarial.py  eval_lsh_prefilter_samenorm.py  eval_memory_traffic_bounds.py  eval_meta_stress.py  eval_meta_threshold_integration.py  eval_multislot.py  eval_natural_tier_scaling.py  eval_opt.py  (+56 more)
(+581 files in other folders)
